Login and signup completed

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -43,6 +43,7 @@
             android:textColor="@color/black"
             android:drawableLeft="@drawable/baseline_email_24"
             android:textSize="16sp"
+            android:maxLines="1"
             android:drawablePadding="10dp"
             android:layout_marginBottom="20dp"
             android:textColorHint="@color/LightGray"
@@ -61,6 +62,7 @@
             android:background="@drawable/edittext_background"
             android:fontFamily="@font/plus"
             android:gravity="center_vertical"
+            android:maxLines="1"
             android:id="@+id/nameregister"
             android:textColor="@color/black"
             android:drawableLeft="@drawable/baseline_email_24"
@@ -83,6 +85,7 @@
             android:background="@drawable/edittext_background"
             android:fontFamily="@font/plus"
             android:gravity="center_vertical"
+            android:maxLines="1"
             android:id="@+id/phnoregister"
             android:textColor="@color/black"
             android:inputType="number"
@@ -111,6 +114,7 @@
             android:drawableLeft="@drawable/baseline_security_24"
             android:textSize="16sp"
             android:inputType="textPassword"
+            android:maxLines="1"
             android:drawablePadding="10dp"
             android:layout_marginBottom="20dp"
             android:textColorHint="@color/LightGray"
@@ -134,6 +138,7 @@
             android:fontFamily="@font/plus"
             android:textColor="@color/black"
             android:drawableLeft="@drawable/baseline_security_24"
+            android:maxLines="1"
             android:textSize="16sp"
             android:drawablePadding="10dp"
             android:inputType="textPassword"
