--- a/app/src/main/res/layout/dailog_forgot.xml
+++ b/app/src/main/res/layout/dailog_forgot.xml
@@ -22,10 +22,11 @@
             android:id="@+id/forgotTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/PrimaryColor"
+            android:background="@drawable/bg_reset"
             android:drawableLeft="@drawable/baseline_lock_reset_24"
             android:drawablePadding="8dp"
             android:fontFamily="@font/lato"
+
             android:elevation="5dp"
             android:padding="10dp"
             android:text="Reset Password"
@@ -41,7 +42,7 @@
             android:paddingStart="10dp"
             android:layout_marginEnd="20dp"
             android:fontFamily="@font/lato"
-            android:text="Enter your email address:"
+            android:text="Enter your email address"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
