Login and signup completed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,22 @@
         android:layout_weight="1"
         />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
+    <com.ismaeldivita.chipnavigation.ChipNavigationBar
+        android:id="@+id/bottomappbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bottomappbar"
-        app:itemTextColor="@color/black"
-        app:backgroundTint="@color/LightGray"
-        app:itemIconTint="@color/black"
-        app:menu="@menu/bottom_menu"
-        />
+        android:padding="7dp"
+        app:cnb_menuResource="@menu/bottom_menu"
+        app:cnb_orientationMode="horizontal"
+        app:cnb_addBottomInset="false"
+        app:cnb_addLeftInset="false"
+        app:cnb_addRightInset="false"
+        app:cnb_addTopInset="false"
+        app:cnb_unselectedColor="@color/black"
+        app:cnb_backgroundColor="@color/PrimaryColor"
+        app:cnb_badgeColor="@color/PrimaryColor"
+        app:cnb_radius="20dp"
+        app:cnb_iconSize="20dp"
+        app:cnb_animationDuration="175"/>
 
 </LinearLayout>
