--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
     android:title="Home"
     android:id="@+id/Homebottom"
     android:icon="@drawable/bottom_btn1"
+    app:cnb_iconColor="@color/black"
+    app:cnb_textColor="@color/white"
+    app:cnb_backgroundColor="@color/PrimaryColor"
 
     />
     <item
         android:title="Board"
         android:id="@+id/boardbottom"
         android:icon="@drawable/bottom_btn2"
+        app:cnb_iconColor="@color/black"
+        app:cnb_textColor="@color/white"
+        app:cnb_backgroundColor="@color/PrimaryColor"
         />
     <item
         android:title="BookMark"
         android:id="@+id/bookmarkbottom"
         android:icon="@drawable/bottom_btn3"
+        app:cnb_iconColor="@color/black"
+        app:cnb_textColor="@color/white"
+        app:cnb_backgroundColor="@color/PrimaryColor"
         />
     <item
         android:title="Profile"
         android:id="@+id/profilebottom"
+        app:cnb_iconColor="@color/black"
+        app:cnb_textColor="@color/white"
+        app:cnb_backgroundColor="@color/PrimaryColor"
         android:icon="@drawable/bottom_btn4"/>
 </menu>
