--- a/app/src/main/res/layout/board_fragment.xml
+++ b/app/src/main/res/layout/board_fragment.xml
@@ -1,14 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/gray"
     tools:context="Fragments.BoardFragment">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textSize="30sp"
-        android:text="board" />
+        android:text=""
+        />
 
-</FrameLayout>
+</LinearLayout>
