--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -139,6 +140,7 @@
             android:elevation="8dp"
             android:layout_marginTop="17dp"
             android:padding="8dp"
+            android:id="@+id/messagetxt"
             android:layout_marginLeft="20dp"
             android:background="@drawable/white_bg"
             android:layout_marginRight="20dp"
@@ -160,7 +162,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Security"
+                android:text="Message"
                 android:textColor="@color/black"
                 android:layout_marginStart="12dp"
                 android:textSize="17sp"
