Login and signup completed

--- a/app/src/main/res/layout/userlisttemplate.xml
+++ b/app/src/main/res/layout/userlisttemplate.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="3dp"
@@ -19,8 +19,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/profilepicuserlist"
         android:orientation="vertical"
-        android:layout_gravity="center">
+        android:layout_centerInParent="true">
 
         <TextView
             android:layout_width="wrap_content"
@@ -40,7 +41,34 @@
             android:textColor="@color/black"
             android:id="@+id/user_phone_number"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_alignParentEnd="true"
+        android:visibility="gone"
+        android:id="@+id/countmessagebg"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:background="@drawable/send_circlebg"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/messagecount"
+            android:text=""
+            android:textStyle="bold"
+            android:fontFamily="@font/lato"
+            android:gravity="center"
+            android:textColor="@color/white"
+
+            />
+
+    </LinearLayout>
 
 
 
-</LinearLayout>
+
+</RelativeLayout>
