--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="13dp"
+    android:padding="10dp"
     android:background="@color/gray"
     tools:context="Fragments.ProfileFragment">
 
@@ -20,7 +20,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/lato"
             android:text="Profile"
-            android:gravity="center"
+            android:gravity="start"
             android:layout_gravity="center"
             android:textColor="@color/black"
             android:textSize="22sp"
@@ -37,313 +37,157 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         >
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/shapeableImageViewq"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="60dp"
-            android:padding="2dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_weight="1"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/person3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/homeconstraint1"
             app:strokeColor="@color/darkblue"
             app:strokeWidth="3dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="UserName"
-            android:layout_marginTop="7dp"
-            android:id="@+id/usernametxt"
-            android:layout_gravity="center_horizontal"
-            android:textSize="18sp"
-            android:fontFamily="@font/lato"
-            android:textColor="@color/black"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="UserName"
-            android:layout_marginTop="0dp"
-            android:id="@+id/emailtxt"
-            android:layout_gravity="center_horizontal"
-            android:textSize="15sp"
-            android:fontFamily="@font/plus"
-            android:textColor="@color/black"/>
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textColor="@color/white"
-            android:text="Edit Profile"
-            android:layout_gravity="center_horizontal"
-            android:fontFamily="@font/lato"
-            android:textStyle="bold"
-            android:textSize="16sp"
-            android:id="@+id/btneditprofile"/>
-
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
             android:layout_height="wrap_content"
-            android:elevation="8dp"
-            android:padding="8dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/white_bg"
-            android:layout_marginBottom="2dp"
-            android:orientation="horizontal"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/gray_circle"
-                android:padding="10dp"
-                >
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/btn_4"
-                    app:tint="@color/PrimaryColor"/>
-            </LinearLayout>
+            android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Settings"
-                android:textColor="@color/black"
-                android:layout_marginStart="12dp"
-                android:textSize="17sp"
-                android:layout_weight="1"
-                android:gravity="start"
+                android:text="7"
+                android:layout_marginTop="7dp"
+                android:id="@+id/Certificates"
+                android:layout_gravity="center_horizontal"
+                android:textSize="14sp"
                 android:fontFamily="@font/lato"
-                android:layout_gravity="center"/>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/gray_circle"
-                android:padding="10dp"
-                >
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/baseline_keyboard_arrow_right_24"
-                    app:tint="@color/PrimaryColor"/>
-            </LinearLayout>
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="8dp"
-            android:layout_marginTop="17dp"
-            android:padding="8dp"
-            android:id="@+id/messagetxt"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/white_bg"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="2dp"
-            android:orientation="horizontal"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/gray_circle"
-                android:padding="10dp"
-                >
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/btn_4"
-                    app:tint="@color/PrimaryColor"/>
-            </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Message"
-                android:textColor="@color/black"
-                android:layout_marginStart="12dp"
-                android:textSize="17sp"
-                android:layout_weight="1"
-                android:gravity="start"
-                android:fontFamily="@font/lato"
-                android:layout_gravity="center"/>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/gray_circle"
-                android:padding="10dp"
-                >
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/baseline_keyboard_arrow_right_24"
-                    app:tint="@color/PrimaryColor"/>
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:elevation="8dp"
-            android:layout_marginTop="17dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@drawable/white_bg"
-            android:layout_marginBottom="2dp"
-            android:orientation="horizontal"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/gray_circle"
-                android:padding="10dp"
-                >
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/btn_4"
-                    app:tint="@color/PrimaryColor"/>
-            </LinearLayout>
+                android:textColor="@color/black"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Certificates"
-                android:textColor="@color/black"
-                android:layout_marginStart="12dp"
-                android:textSize="17sp"
-                android:layout_weight="1"
-                android:gravity="start"
+                android:layout_marginTop="0dp"
+                android:id="@+id/cer"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15sp"
                 android:fontFamily="@font/lato"
-                android:layout_gravity="center"/>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/gray_circle"
-                android:padding="10dp"
-                >
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/baseline_keyboard_arrow_right_24"
-                    app:tint="@color/PrimaryColor"/>
-            </LinearLayout>
+                android:textColor="@color/black"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="match_parent"
-            android:padding="8dp"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
             android:layout_height="wrap_content"
-            android:elevation="8dp"
-            android:layout_marginTop="17dp"
-            android:background="@drawable/white_bg"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="2dp"
-            android:orientation="horizontal"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/gray_circle"
-                android:padding="10dp"
-                >
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/btn_4"
-                    app:tint="@color/PrimaryColor"/>
-            </LinearLayout>
+            android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Terms and Conditions"
-                android:textColor="@color/black"
-                android:textSize="17sp"
-                android:layout_weight="1"
-                android:layout_marginStart="12dp"
-                android:gravity="start"
+                android:text="30"
+                android:layout_marginTop="7dp"
+                android:id="@+id/followers"
+                android:layout_gravity="center_horizontal"
+                android:textSize="14sp"
                 android:fontFamily="@font/lato"
-                android:layout_gravity="center"/>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/gray_circle"
-                android:padding="10dp"
-                >
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/baseline_keyboard_arrow_right_24"
-                    app:tint="@color/PrimaryColor"/>
-            </LinearLayout>
-
-
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:padding="8dp"
-            android:layout_height="wrap_content"
-            android:elevation="8dp"
-            android:id="@+id/lodoutbtn"
-            android:layout_marginTop="17dp"
-            android:background="@drawable/white_bg"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="2dp"
-            android:orientation="horizontal"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/gray_circle"
-                android:padding="10dp"
-                >
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/baseline_logout_24"
-                    app:tint="@color/PrimaryColor"/>
-            </LinearLayout>
+                android:textColor="@color/black"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Log Out"
-                android:textColor="#DC4237"
-                android:textSize="17sp"
-                android:layout_weight="1"
-                android:layout_marginStart="12dp"
-                android:gravity="start"
+                android:text="Followers"
+                android:layout_marginTop="0dp"
+                android:id="@+id/Foloow"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15sp"
                 android:fontFamily="@font/lato"
-                android:layout_gravity="center"/>
-            <LinearLayout
+                android:textColor="@color/black"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/gray_circle"
-                android:padding="10dp"
-                >
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@drawable/baseline_keyboard_arrow_right_24"
-                    app:tint="@color/PrimaryColor"/>
-            </LinearLayout>
+                android:text="80"
+                android:layout_marginTop="7dp"
+                android:id="@+id/followingcount"
+                android:layout_gravity="center_horizontal"
+                android:textSize="14sp"
+                android:fontFamily="@font/lato"
+                android:textColor="@color/black"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Following"
+                android:layout_marginTop="0dp"
+                android:id="@+id/following"
+                android:layout_gravity="center_horizontal"
+                android:textSize="15sp"
+                android:fontFamily="@font/lato"
+                android:textColor="@color/black"/>
         </LinearLayout>
-        <!--<Button
-            android:layout_width="match_parent"
+</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="9dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:textColor="@color/white"
-            android:text="Log Out"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_gravity="center_horizontal"
+            android:text="Mr_Pm143"
+            android:layout_marginTop="0dp"
+            android:id="@+id/usernametxt"
+            android:maxLines="1"
+            android:layout_gravity="start"
+            android:textSize="15sp"
             android:fontFamily="@font/lato"
+            android:textColor="@color/black"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Programmer \n Entrepreneur \n Web Developer \n Android Deve;loper"
+            android:layout_marginTop="3dp"
+            android:id="@+id/biotxt"
+            android:layout_gravity="start"
+            android:textSize="13sp"
             android:textStyle="bold"
-            android:textSize="16sp"
-            android:id="@+id/lodoutbtn"/>-->
+            android:fontFamily="@font/plus"
+            android:textColor="@color/black"/>
     </LinearLayout>
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:fontFamily="@font/lato"
+        android:text="Edit Profile"
+        android:id="@+id/editprofiletxt"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:fontFamily="@font/lato"
+        android:text="Log out"
+        android:id="@+id/lgout"/>
+    <com.google.android.material.tabs.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tab_mains"
+        android:background="@color/gray"
+        app:tabTextColor="@color/black"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        />
+    <androidx.viewpager.widget.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/viewpagermain"
+        />
 </LinearLayout>
