Login and signup completed

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -10,22 +10,22 @@
     app:cnb_backgroundColor="@color/PrimaryColor"
 
     />
-    <item
-        android:title="Board"
-        android:id="@+id/boardbottom"
-        android:icon="@drawable/bottom_btn2"
-        app:cnb_iconColor="@color/white"
-        app:cnb_textColor="@color/white"
-        app:cnb_backgroundColor="@color/PrimaryColor"
-        />
-    <item
-        android:title="BookMark"
-        android:id="@+id/bookmarkbottom"
-        android:icon="@drawable/bottom_btn3"
-        app:cnb_iconColor="@color/white"
-        app:cnb_textColor="@color/white"
-        app:cnb_backgroundColor="@color/PrimaryColor"
-        />
+<!--    <item-->
+<!--        android:title="Board"-->
+<!--        android:id="@+id/boardbottom"-->
+<!--        android:icon="@drawable/bottom_btn2"-->
+<!--        app:cnb_iconColor="@color/white"-->
+<!--        app:cnb_textColor="@color/white"-->
+<!--        app:cnb_backgroundColor="@color/PrimaryColor"-->
+<!--        />-->
+<!--    <item-->
+<!--        android:title="BookMark"-->
+<!--        android:id="@+id/bookmarkbottom"-->
+<!--        android:icon="@drawable/bottom_btn3"-->
+<!--        app:cnb_iconColor="@color/white"-->
+<!--        app:cnb_textColor="@color/white"-->
+<!--        app:cnb_backgroundColor="@color/PrimaryColor"-->
+<!--        />-->
     <item
         android:title="Profile"
         android:id="@+id/profilebottom"
