--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -44,6 +44,7 @@
             android:drawableLeft="@drawable/baseline_email_24"
             android:textSize="16sp"
             android:maxLines="1"
+            android:inputType="textEmailAddress"
             android:drawablePadding="10dp"
             android:layout_marginBottom="20dp"
             android:textColorHint="@color/LightGray"
