--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="DarkGray">#212121</color>
     <color name="LightGray">#757575</color>
     <color name="gray">#e9e7f2</color>
+    <color name="background_light">#F8F9FA</color>
+    <color name="text_primary">#2C3E50</color>
+    <color name="hint_gray">#BDC3C7</color>
+    <color name="primary_color">#3498DB</color>
 </resources>
